@@ -31,7 +31,6 @@ import java.awt.event.ActionListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.logging.Level;
@@ -58,7 +57,6 @@ import org.netbeans.api.project.FileOwnerQuery;
 import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ui.OpenProjects;
 import org.netbeans.editor.JumpList;
-import org.netbeans.modules.jumpto.EntityComparator;
 import org.netbeans.modules.jumpto.common.AbstractModelFilter;
 import org.netbeans.modules.jumpto.common.ItemRenderer;
 import org.netbeans.modules.jumpto.common.Models;
@@ -95,18 +93,14 @@ public class FileSearchAction extends AbstractAction implements FileSearchPanel.
     /* package */ static final String CAMEL_CASE_SEPARATOR = "\\p{javaUpperCase}|-|_|\\.";    //NOI18N
     /* package */ static final String CAMEL_CASE_PART_CASE_SENSITIVE = "\\p{javaLowerCase}|\\p{Digit}|\\$";         //NOI18N
     /* package */ static final String CAMEL_CASE_PART_CASE_INSENSITIVE = "\\p{javaLowerCase}|\\p{Digit}|\\p{javaUpperCase}|\\$";         //NOI18N
-    /* package */ static final Map<String,Object> SEARCH_OPTIONS_CASE_SENSITIVE;
-    /* package */ static final Map<String,Object> SEARCH_OPTIONS_CASE_INSENSITIVE;
-    static {
-        Map<String,Object> m = new HashMap<>();
-        m.put(Queries.OPTION_CAMEL_CASE_SEPARATOR, CAMEL_CASE_SEPARATOR);
-        m.put(Queries.OPTION_CAMEL_CASE_PART, CAMEL_CASE_PART_CASE_SENSITIVE);
-        SEARCH_OPTIONS_CASE_SENSITIVE = Collections.unmodifiableMap(m);
-        m = new HashMap<>();
-        m.put(Queries.OPTION_CAMEL_CASE_SEPARATOR, CAMEL_CASE_SEPARATOR);
-        m.put(Queries.OPTION_CAMEL_CASE_PART, CAMEL_CASE_PART_CASE_INSENSITIVE);
-        SEARCH_OPTIONS_CASE_INSENSITIVE = Collections.unmodifiableMap(m);
-    }
+    /* package */ static final Map<String, Object> SEARCH_OPTIONS_CASE_SENSITIVE = Map.of(
+            Queries.OPTION_CAMEL_CASE_SEPARATOR, CAMEL_CASE_SEPARATOR,
+            Queries.OPTION_CAMEL_CASE_PART, CAMEL_CASE_PART_CASE_SENSITIVE
+    );
+    /* package */ static final Map<String, Object> SEARCH_OPTIONS_CASE_INSENSITIVE = Map.of(
+            Queries.OPTION_CAMEL_CASE_SEPARATOR, CAMEL_CASE_SEPARATOR,
+            Queries.OPTION_CAMEL_CASE_PART, CAMEL_CASE_PART_CASE_INSENSITIVE
+    );
     private static final char LINE_NUMBER_SEPARATOR = ':';    //NOI18N
     private static final Pattern PATTERN_WITH_LINE_NUMBER = Pattern.compile("(.*)"+LINE_NUMBER_SEPARATOR+"(\\d*)");    //NOI18N
 
@@ -217,7 +211,11 @@ public class FileSearchAction extends AbstractAction implements FileSearchPanel.
 
         // Compute in other thread
         synchronized(this) {
-            final SearchType searchType = Utils.toSearchType(nameKind);
+            SearchType searchType = Utils.toSearchType(nameKind);
+            // todo: QuerySupport.Kind has no case insensitive exact mode
+            if (!panel.isCaseSensitive() && searchType == SearchType.EXACT_NAME) {
+                searchType = SearchType.CASE_INSENSITIVE_EXACT_NAME;
+            }
             if (currentSearch.isNarrowing(searchType, text, getSearchScope(panel), true)) {
                 itemsComparator.setUsePreferred(panel.isPreferedProject());
                 itemsComparator.setText(text);
